# iot-dashboard-mqtt-telegraf-influxdb-grafana

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Documentation/architecture/: architecture.vsdx
architecture/: architecture.excalidraw.json
backend/: .env  docker-compose.yml  entrypoint.sh  grafana.env  mosquitto.conf  telegraf.conf
backend/telegraf/: telegraf.conf
docs/: Create_Python_Environment.md  Pyenv_installation.md  backend_instructions.md  configure_esp32.md
influxdb/: .env  docker-compose.yml
microcontroller/: boot.py  config.json  main.py
microcontroller/src/: config_reader.py  sensor.py  time.py  wifi.py
multi-container/: docker-compose.yml  telegraf.conf
multi-container/config/: influx-configs
multi-container/data/: influxd.bolt
multi-container/data/engine/data/5f1916c3e02e1f4a/autogen/1/: fields.idxl
multi-container/data/engine/data/5f1916c3e02e1f4a/autogen/1/index/5/: L0-00000001.tsl
multi-container/data/engine/data/5f1916c3e02e1f4a/autogen/1/index/6/: L0-00000001.tsl
multi-container/data/engine/data/5f1916c3e02e1f4a/autogen/1/index/7/: L0-00000001.tsl
multi-container/data/engine/wal/5f1916c3e02e1f4a/autogen/1/: _00001.wal
sensor/: data_fetcher.py  influxdb-client.py
simulated_sensor/: broker_config.json  temperature_sensor.py
telegraf/: docker-compose.yml  telegraf.conf
