[tool.poetry]
name = "localweather-reader"
version = "0.1.0"
description = ""
authors = ["vasilogi <jean.vasil@gmailcom>"]
readme = "README.md"
packages = [{include = "localweather_reader"}]

[tool.poetry.dependencies]
python = "3.12"
influxdb-client = "^1.40.0"
influxdb3-python = "^0.3.6"
paho-mqtt = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
